bug 806059 - make gfxQuartzNativeDrawing aware of backing scale factor when rendering native widgets. r=smichaud